feat: maintenance mode overlay, bounty phase updates, responsive fixes
Add VITE_MAINTENANCE_MODE env-driven full-screen blocking overlay.
Add pending/rejected bounty phases to UI, live feed, and WS provider.
Fix header and match card layout overflow on mobile.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ VITE_API_URL=http://localhost:8080
 VITE_WS_URL=ws://localhost:8080/ws/live
 VITE_BLOCK_EXPLORER_URL=https://testnet.monadvision.com
 VITE_MOCK_BOUNTIES=false
+VITE_MAINTENANCE_MODE=false
