fix: SPA routing — serve with -s flag for client-side route fallback
Hard refresh on /bounties or /how-to-join returned 404 because the
static server looked for literal files. Now using 'serve -s' which
falls back to index.html for all non-file routes.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,8 @@
 [phases.setup]
-aptPkgs = ["...", "python3", "make", "g++"]
+aptPkgs = ["python3", "make", "g++"]
+
+[phases.build]
+cmds = ["npm ci", "npm run build", "npx --yes serve --version"]
+
+[start]
+cmd = "npx serve dist -s -l 3000"
